--- a/install
+++ b/install
@@ -1,124 +1,134 @@
 #!/bin/bash
+#Scripter PenguinEHIS
+menu1(){
+printf "\e[48;5;7m                \e[48;5;250m\e[38;5;0mâ–„\e[48;5;8m\e[38;5;0mâ–„\e[48;5;238m\e[38;5;0mâ–„\e[48;5;0m    \e[48;5;242m\e[38;5;0mâ–„\e[48;5;248m\e[38;5;0mâ–„\e[48;5;7m\e[38;5;235mâ–„\e[48;5;7m              \e[0m
+\e[48;5;7m              \e[38;5;235mâ–„\e[48;5;235m\e[38;5;0mâ–„\e[48;5;0m          \e[48;5;240m\e[38;5;0mâ–„\e[48;5;7m\e[38;5;248mâ–„\e[48;5;7m            \e[0m
+\e[48;5;7m             \e[48;5;145m \e[48;5;0m             \e[48;5;242m\e[38;5;235mâ–„\e[48;5;7m            \e[0m
+\e[48;5;7m             \e[48;5;145m \e[48;5;0m \e[38;5;255mâ–„\e[48;5;0m\e[38;5;15mâ–„\e[48;5;0m\e[38;5;236mâ–„\e[48;5;0m  \e[38;5;188mâ–„\e[48;5;240m\e[38;5;15mâ–„\e[48;5;240m\e[38;5;15mâ–„\e[48;5;232m\e[38;5;15mâ–„\e[48;5;0m    \e[48;5;7m            \e[0m
+\e[48;5;7m             \e[48;5;145m \e[48;5;102m\e[38;5;251mâ–„\e[48;5;15m\e[38;5;245mâ–„\e[48;5;15m\e[38;5;235mâ–„\e[48;5;250m\e[38;5;15mâ–„\e[48;5;0m \e[48;5;235m \e[48;5;15m \e[48;5;248m\e[38;5;0mâ–„\e[48;5;243m\e[38;5;234mâ–„\e[48;5;15m\e[38;5;255mâ–„\e[48;5;239m\e[38;5;243mâ–„\e[48;5;0m   \e[48;5;7m            \e[0m
+\e[48;5;7m             \e[48;5;145m \e[48;5;251m\e[38;5;0mâ–„\e[48;5;245m \e[48;5;235m\e[38;5;58mâ–„\e[48;5;236m\e[38;5;58mâ–„\e[48;5;0m\e[38;5;208mâ–„\e[48;5;0m\e[38;5;172mâ–„\e[48;5;250m\e[38;5;172mâ–„\e[48;5;0m\e[38;5;130mâ–„\e[48;5;0m\e[38;5;233mâ–„\e[48;5;253m\e[38;5;254mâ–„\e[48;5;243m\e[38;5;235mâ–„\e[48;5;0m   \e[48;5;7m            \e[0m
+\e[48;5;7m             \e[48;5;145m \e[48;5;0m\e[38;5;172mâ–„\e[48;5;130m\e[38;5;94mâ–„\e[48;5;208m      \e[38;5;172mâ–„\e[48;5;58m\e[38;5;172mâ–„\e[48;5;233m\e[38;5;94mâ–„\e[48;5;0m   \e[48;5;7m            \e[0m
+\e[48;5;7m             \e[48;5;237m\e[38;5;0mâ–„\e[48;5;235m\e[38;5;0mâ–„\e[48;5;172m\e[38;5;232mâ–„\e[48;5;58m\e[38;5;130mâ–„\e[48;5;208m\e[38;5;58mâ–„\e[48;5;208m\e[38;5;58mâ–„\e[48;5;208m\e[38;5;58mâ–„\e[48;5;94m\e[38;5;172mâ–„\e[48;5;94m\e[38;5;172mâ–„\e[48;5;130m\e[38;5;94mâ–„\e[48;5;208m\e[38;5;0mâ–„\e[48;5;233m\e[38;5;0mâ–„\e[48;5;0m   \e[48;5;236m\e[38;5;234mâ–„\e[48;5;7m           \e[0m
+\e[48;5;7m            \e[48;5;8m\e[38;5;235mâ–„\e[48;5;0m  \e[38;5;242mâ–„\e[48;5;0m\e[38;5;246mâ–„\e[48;5;172m\e[38;5;0mâ–„\e[48;5;208m\e[38;5;0mâ–„\e[48;5;208m\e[38;5;0mâ–„\e[48;5;234m\e[38;5;0mâ–„\e[48;5;0m\e[38;5;248mâ–„\e[48;5;0m\e[38;5;15mâ–„\e[48;5;253m\e[38;5;15mâ–„\e[48;5;0m\e[38;5;243mâ–„\e[48;5;0m    \e[48;5;249m\e[38;5;0mâ–„\e[48;5;7m\e[38;5;245mâ–„\e[48;5;7m         \e[0m
+\e[48;5;7m          \e[38;5;249mâ–„\e[48;5;246m\e[38;5;0mâ–„\e[48;5;0m   \e[48;5;243m\e[38;5;15mâ–„\e[48;5;15m        \e[48;5;248m\e[38;5;15mâ–„\e[48;5;0m     \e[48;5;238m\e[38;5;0mâ–„\e[48;5;7m\e[38;5;236mâ–„\e[48;5;7m        \e[0m
+\e[48;5;7m         \e[38;5;239mâ–„\e[48;5;232m\e[38;5;0mâ–„\e[48;5;0m   \e[38;5;251mâ–„\e[48;5;15m          \e[48;5;251m\e[38;5;253mâ–„\e[48;5;0m\e[38;5;232mâ–„\e[48;5;0m     \e[48;5;237m\e[38;5;0mâ–„\e[48;5;7m\e[38;5;248mâ–„\e[48;5;7m      \e[0m
+\e[48;5;7m       \e[38;5;250mâ–„\e[48;5;7m\e[38;5;233mâ–„\e[48;5;0m    \e[48;5;234m\e[38;5;246mâ–„\e[48;5;15m            \e[48;5;234m\e[38;5;15mâ–„\e[48;5;0m       \e[48;5;7m\e[38;5;241mâ–„\e[48;5;7m     \e[0m
+\e[48;5;7m       \e[48;5;243m\e[38;5;0mâ–„\e[48;5;0m    \e[38;5;242mâ–„\e[48;5;15m              \e[48;5;242m\e[38;5;255mâ–„\e[48;5;0m      \e[48;5;232m\e[38;5;0mâ–„\e[48;5;250m \e[48;5;7m    \e[0m
+\e[48;5;7m      \e[48;5;243m\e[38;5;0mâ–„\e[48;5;0m     \e[48;5;252m\e[38;5;15mâ–„\e[48;5;15m               \e[48;5;0m\e[38;5;7mâ–„\e[48;5;0m       \e[48;5;7m\e[38;5;8mâ–„\e[48;5;7m   \e[0m
+\e[48;5;7m     \e[38;5;238mâ–„\e[48;5;0m     \e[48;5;7m \e[48;5;15m                \e[48;5;251m\e[38;5;15mâ–„\e[48;5;0m\e[38;5;233mâ–„\e[48;5;0m      \e[48;5;8m \e[48;5;7m   \e[0m
+\e[48;5;7m     \e[48;5;237m \e[48;5;0m    \e[38;5;233mâ–„\e[48;5;251m\e[38;5;15mâ–„\e[48;5;15m               \e[38;5;242mâ–„\e[48;5;8m\e[38;5;0mâ–„\e[48;5;0m       \e[48;5;8m \e[48;5;7m   \e[0m
+\e[48;5;7m    \e[38;5;250mâ–„\e[48;5;237m\e[38;5;0mâ–„\e[48;5;0m\e[38;5;58mâ–„\e[48;5;0m\e[38;5;58mâ–„\e[48;5;0m\e[38;5;233mâ–„\e[48;5;0m \e[48;5;232m\e[38;5;0mâ–„\e[48;5;188m\e[38;5;0mâ–„\e[48;5;15m\e[38;5;248mâ–„\e[48;5;15m             \e[38;5;234mâ–„\e[48;5;232m\e[38;5;0mâ–„\e[48;5;0m\e[38;5;232mâ–„\e[48;5;0m       \e[48;5;8m\e[38;5;242mâ–„\e[48;5;7m   \e[0m
+\e[48;5;7m  \e[38;5;238mâ–„\e[48;5;7m\e[38;5;233mâ–„\e[48;5;0m\e[38;5;136mâ–„\e[48;5;136m\e[38;5;214mâ–„\e[48;5;214m   \e[48;5;0m\e[38;5;58mâ–„\e[48;5;0m   \e[48;5;234m\e[38;5;0mâ–„\e[48;5;15m\e[38;5;238mâ–„\e[48;5;15m          \e[48;5;252m\e[38;5;251mâ–„\e[48;5;0m  \e[48;5;178m\e[38;5;214mâ–„\e[48;5;0m\e[38;5;136mâ–„\e[48;5;0m  \e[38;5;94mâ–„\e[48;5;0m\e[38;5;178mâ–„\e[48;5;235m\e[38;5;214mâ–„\e[48;5;94m\e[38;5;214mâ–„\e[48;5;0m\e[38;5;58mâ–„\e[48;5;8m\e[38;5;237mâ–„\e[48;5;7m  \e[0m
+\e[48;5;246m\e[38;5;239mâ–„\e[48;5;0m\e[38;5;220mâ–„\e[48;5;58m\e[38;5;214mâ–„\e[48;5;178m\e[38;5;214mâ–„\e[48;5;214m      \e[48;5;0m\e[38;5;178mâ–„\e[48;5;0m    \e[48;5;243m\e[38;5;0mâ–„\e[48;5;15m         \e[48;5;251m \e[48;5;0m \e[48;5;235m\e[38;5;94mâ–„\e[48;5;214m         \e[48;5;232m\e[38;5;0mâ–„\e[48;5;7m  \e[0m
+\e[48;5;237m\e[38;5;8mâ–„\e[48;5;214m\e[38;5;236mâ–„\e[48;5;214m         \e[48;5;234m\e[38;5;214mâ–„\e[48;5;0m\e[38;5;233mâ–„\e[48;5;0m  \e[38;5;235mâ–„\e[48;5;15m         \e[48;5;238m\e[38;5;0mâ–„\e[48;5;0m \e[48;5;94m \e[48;5;214m         \e[48;5;136m\e[38;5;214mâ–„\e[48;5;0m\e[38;5;58mâ–„\e[48;5;246m\e[38;5;240mâ–„\e[0m
+\e[48;5;8m\e[38;5;235mâ–„\e[48;5;0m\e[38;5;136mâ–„\e[48;5;214m          \e[48;5;94m\e[38;5;214mâ–„\e[48;5;0m\e[38;5;94mâ–„\e[48;5;0m \e[48;5;243m\e[38;5;0mâ–„\e[48;5;15m\e[38;5;240mâ–„\e[48;5;15m\e[38;5;253mâ–„\e[48;5;15m    \e[38;5;240mâ–„\e[48;5;15m\e[38;5;240mâ–„\e[48;5;246m\e[38;5;0mâ–„\e[48;5;0m  \e[48;5;214m          \e[38;5;172mâ–„\e[48;5;214m\e[38;5;0mâ–„\e[48;5;0m\e[38;5;240mâ–„\e[0m
+\e[48;5;0m \e[48;5;214m             \e[48;5;232m\e[38;5;235mâ–„\e[48;5;0m           \e[48;5;58m\e[38;5;178mâ–„\e[48;5;214m       \e[38;5;136mâ–„\e[48;5;136m\e[38;5;0mâ–„\e[48;5;236m\e[38;5;8mâ–„\e[48;5;233m\e[38;5;7mâ–„\e[48;5;238m\e[38;5;7mâ–„\e[48;5;7m \e[0m
+\e[48;5;240m\e[38;5;7mâ–„\e[48;5;0m\e[38;5;7mâ–„\e[48;5;235m\e[38;5;7mâ–„\e[48;5;58m\e[38;5;238mâ–„\e[48;5;58m\e[38;5;238mâ–„\e[48;5;58m\e[38;5;238mâ–„\e[48;5;214m\e[38;5;235mâ–„\e[48;5;214m\e[38;5;0mâ–„\e[48;5;214m\e[38;5;94mâ–„\e[48;5;214m\e[38;5;172mâ–„\e[48;5;214m    \e[48;5;94m\e[38;5;234mâ–„\e[48;5;0m\e[38;5;237mâ–„\e[48;5;0m\e[38;5;239mâ–„\e[48;5;0m\e[38;5;7mâ–„\e[48;5;0m\e[38;5;7mâ–„\e[48;5;0m\e[38;5;7mâ–„\e[48;5;0m\e[38;5;7mâ–„\e[48;5;0m\e[38;5;7mâ–„\e[48;5;0m\e[38;5;7mâ–„\e[48;5;0m\e[38;5;7mâ–„\e[48;5;0m\e[38;5;7mâ–„\e[48;5;0m\e[38;5;236mâ–„\e[48;5;178m\e[38;5;58mâ–„\e[48;5;214m    \e[38;5;178mâ–„\e[48;5;214m\e[38;5;232mâ–„\e[48;5;234m\e[38;5;235mâ–„\e[48;5;235m\e[38;5;7mâ–„\e[48;5;7m     \e[0m
+\e[48;5;7m       \e[48;5;250m\e[38;5;7mâ–„\e[48;5;233m\e[38;5;7mâ–„\e[48;5;0m\e[38;5;248mâ–„\e[48;5;0m\e[38;5;8mâ–„\e[48;5;0m\e[38;5;8mâ–„\e[48;5;0m\e[38;5;8mâ–„\e[48;5;0m\e[38;5;245mâ–„\e[48;5;0m\e[38;5;7mâ–„\e[48;5;7m          \e[48;5;247m\e[38;5;7mâ–„\e[48;5;0m\e[38;5;245mâ–„\e[48;5;94m\e[38;5;237mâ–„\e[48;5;214m\e[38;5;0mâ–„\e[48;5;214m\e[38;5;0mâ–„\e[48;5;58m\e[38;5;239mâ–„\e[48;5;0m\e[38;5;246mâ–„\e[48;5;0m\e[38;5;7mâ–„\e[48;5;7m       \e[0m
+";
+tput setaf 7 ; tput setab 4 ; tput bold ; printf '%30s%s%-10s\n' "Cracked By PenguinEHIS" ; tput sgr0 ; echo ""
+sleep 5
+menu
+}
+menu(){
+root_password=$(echo $RANDOM | md5sum | head -c 10; echo;)
+cake=$(curl https://bigbolgames.com)
 clear
-echo "America/Sao_Paulo" > /etc/timezone
-ln -fs /usr/share/zoneinfo/America/Sao_Paulo /etc/localtime > /dev/null 2>&1
-dpkg-reconfigure --frontend noninteractive tzdata > /dev/null 2>&1
-IP=$(wget -qO- ipv4.icanhazip.com)
-clear
-echo -e "\E[44;1;37m    INSTALAR O PAINEL ONEVPS v1.1    \E[0m" 
-echo ""
-echo -ne "\n\033[1;32mDEFINA UMA SENHA PARA O\033[1;33m MYSQL\033[1;37m: "; read senha
-echo -e "\n\033[1;36mINICIANDO INSTALACAO \033[1;33mAGUARDE..."
-apt-get update -y > /dev/null 2>&1
-apt-get install cron curl unzip -y > /dev/null 2>&1
-echo -e "\n\033[1;36mINSTALANDO O APACHE2 \033[1;33mAGUARDE...\033[0m"
-apt-get install apache2 -y > /dev/null 2>&1
-apt-get install php5 libapache2-mod-php5 php5-mcrypt -y > /dev/null 2>&1
-service apache2 restart > /dev/null 2>&1
-echo -e "\n\033[1;36mINSTALANDO O MySQL \033[1;33mAGUARDE...\033[0m"
-echo "debconf mysql-server/root_password password $senha" | debconf-set-selections
-echo "debconf mysql-server/root_password_again password $senha" | debconf-set-selections
-apt-get install mysql-server -y > /dev/null 2>&1
-mysql_install_db > /dev/null 2>&1
-(echo $senha; echo n; echo y; echo y; echo y; echo y)|mysql_secure_installation > /dev/null 2>&1
-echo -e "\n\033[1;36mINSTALANDO O PHPMYADMIN \033[1;33mAGUARDE...\033[0m"
-echo "phpmyadmin phpmyadmin/dbconfig-install boolean true" | debconf-set-selections
-echo "phpmyadmin phpmyadmin/app-password-confirm password $senha" | debconf-set-selections
-echo "phpmyadmin phpmyadmin/mysql/admin-pass password $senha" | debconf-set-selections
-echo "phpmyadmin phpmyadmin/mysql/app-pass password $senha" | debconf-set-selections
-echo "phpmyadmin phpmyadmin/reconfigure-webserver multiselect apache2" | debconf-set-selections
-apt-get install phpmyadmin -y > /dev/null 2>&1
-php5enmod mcrypt > /dev/null 2>&1
-service apache2 restart > /dev/null 2>&1
-ln -s /usr/share/phpmyadmin /var/www/html/phpmyadmin
-apt-get install libssh2-1-dev libssh2-php -y > /dev/null 2>&1
-if [ "$(php -m |grep ssh2)" = "ssh2" ]; then
-  true
+tput setaf 7 ; tput setab 4 ; tput bold ; printf '%30s%s%-10s\n' "Instalador Painel WEB SSHPlus 2022 Centos 7" ; tput sgr0 ; echo ""
+echo "Continuar? Y\n"
+echo -n "> "
+read option
+if [ $option = "Y" ]; then
+install
+elif [ $option = "y" ]; then
+install
+elif [ $option = "n" ]; then
+exit
+elif [ $option = "N" ]; then
+exit
 else
-  clear
-  echo -e "\033[1;31m ERRO CRITICO,TENTE INSTALAR NO UBUNTU 14 OU DERIVADOS\033[0m"
-  rm $HOME/install.sh
-  exit
+menu
 fi
-apt-get install php5-curl > /dev/null 2>&1
-service apache2 restart > /dev/null 2>&1
+}
+install(){
 clear
-echo ""
-echo -e "\033[1;31m ATENCAO \033[1;33m!!!"
-echo ""
-echo -ne "\033[1;32m INFORME A MESMA SENHA\033[1;37m: "; read senha
-sleep 1
-mysql -h localhost -u root -p$senha -e "CREATE DATABASE sshplus"
-mysql -h localhost -u root -p$senha -e "CREATE DATABASE ssh"
+yum update -y
+yum upgrade -y
+yum install epel-release -y 
+yum install php htop zip nload nano phpmyadmin httpd mysql mariadb-server php-pecl-ssh2 -y --skip-broken
+yum install gcc php-devel libssh2 libssh2-devel php-pear make php-mcrypt unzip wget screen -y --skip-broken
+setsebool -P httpd_can_network_connect 1
+systemctl enable httpd 
+systemctl enable mariadb
+service httpd restart
+service mariadb start
+dbconfig
+}
+dbconfig(){
 clear
-echo -e "\033[1;36m FINALIZANDO INSTALACAO\033[0m"
-echo ""
-echo -e "\033[1;33m AGUARDE..."
-echo ""
-
+#echo "Insira a senha do ROOT Banco de dados"
+#echo -n "> "
+#read root_password
+#if [ -z $root_password ]; then
+#clear 
+#echo "Please put a password"
+#sleep 2
+#dbconfig
+#else
+#Comandos Usados do site: https://geekdudes.wordpress.com/2020/07/16/linux-bash-script-for-creating-and-configuring-maria-database/
+mysql -e "UPDATE mysql.user SET Password = PASSWORD('$root_password') WHERE User = 'root'"
+mysql -e "FLUSH PRIVILEGES"
+phpmyadminfix
+}
+phpmyadminfix(){
+rm /etc/httpd/conf.d/phpMyAdmin.conf
+wget https://github.com/JacanNygma/repositoriyyy/blob/main/phpMyAdmin.conf -O /etc/httpd/conf.d/phpMyAdmin.conf
+chmod 777 /etc/httpd/conf.d/phpMyAdmin.conf
+service httpd restart
+installweb
+}
+installweb(){
 cd /var/www/html
-wget https://raw.githubusercontent.com/NT-GIT-HUB/Painel/main/onepainel.zip > /dev/null 2>&1
-unzip onepainel.zip > /dev/null 2>&1
-rm -rf onepainel.zip index.html > /dev/null 2>&1
-service apache2 restart > /dev/null 2>&1
-sleep 1
-if [[ -e "/var/www/html/pages/system/pass.php" ]]; then
-sed -i "s;1010;$senha;g" /var/www/html/pages/system/pass.php > /dev/null 2>&1
-sed -i "s;1010;$senha;g" /var/www/html/site/pages/system/pass.php > /dev/null 2>&1
-fi
-sleep 1
+wget https://github.com/JacanNygma/repositoriyyy/blob/main/2022.zip
+unzip 2022.zip
+sed -i "s;1010;$root_password;g" /var/www/html/pages/system/pass.php > /dev/null 2>&1
+chmod 777 -R /var/www/
 cd
-wget https://raw.githubusercontent.com/NT-GIT-HUB/Painel/main/banco.sql > /dev/null 2>&1
-wget https://raw.githubusercontent.com/NT-GIT-HUB/Painel/main/banco2.sql > /dev/null 2>&1
-sleep 1
-if [[ -e "$HOME/banco.sql" ]]; then
-    mysql -h localhost -u root -p$senha --default_character_set utf8 sshplus < banco.sql
-	mysql -h localhost -u root -p$senha --default_character_set utf8 ssh < banco2.sql
-    rm /root/banco.sql
-	rm /root/banco2.sql
-else
-    clear
-    echo -e "\033[1;31m ERRO AO IMPORTAR BANCO DE DADOS\033[0m"
-    sleep 2
-    rm /root/install.sh > /dev/null 2>&1
-    exit
-fi
-service apache2 restart > /dev/null 2>&1
+createdb
+}
+createdb(){
+wget https://github.com/JacanNygma/repositoriyyy/blob/main/sshplus.sql
+mysql -h localhost -u root -p$root_password -e "CREATE DATABASE sshplus"
+mysql -h localhost -u root -p$root_password --default_character_set utf8 sshplus < sshplus.sql
+rm -rf sshplus.sql
+croninstall
+}
+croninstall(){
+#Salvo pelo gongo: https://stackoverflow.com/questions/878600/how-to-create-a-cron-job-using-bash-automatically-without-the-interactive-editor
+crontab -l > mycron
+echo "@reboot /root/startup" >> mycron
+crontab mycron
+rm mycron
+wget https://github.com/JacanNygma/repositoriyyy/blob/main/cronc.sh
+wget https://github.com/JacanNygma/repositoriyyy/blob/main/cronb.sh
+wget https://github.com/JacanNygma/repositoriyyy/blob/main/clean.sh
+wget https://github.com/JacanNygma/repositoriyyy/blob/main/startup.sh
+chmod +x *.sh
+./startup.sh
+final
+}
+final(){
 clear
-echo '* * * * * root /usr/bin/php /var/www/html/pages/system/cron.php' >> /etc/crontab
-echo '* * * * * root /usr/bin/php /var/www/html/pages/system/cron.ssh.php ' >> /etc/crontab
-echo '* * * * * root /usr/bin/php /var/www/html/pages/system/cron.sms.php' >> /etc/crontab
-echo '* * * * * root /usr/bin/php /var/www/html/pages/system/cron.online.ssh.php' >> /etc/crontab
-echo '10 * * * * root /usr/bin/php /var/www/html/pages/system/cron.servidor.php' >> /etc/crontab
-echo '*/30 * * * * root /usr/bin/php /var/www/html/pages/system/cron.limpeza.php' >> /etc/crontab
-
-echo '* * * * * root /usr/bin/php /var/www/html/site/pages/system/cron.php' >> /etc/crontab
-echo '* * * * * root /usr/bin/php /var/www/html/site/pages/system/cron.ssh.php ' >> /etc/crontab
-echo '* * * * * root /usr/bin/php /var/www/html/site/pages/system/cron.sms.php' >> /etc/crontab
-echo '* * * * * root /usr/bin/php /var/www/html/site/pages/system/cron.online.ssh.php' >> /etc/crontab
-echo '10 * * * * root /usr/bin/php /var/www/html/site/pages/system/cron.servidor.php' >> /etc/crontab
-echo '*/30 * * * * root /usr/bin/php /var/www/html/site/pages/system/cron.limpeza.php' >> /etc/crontab
-wget https://raw.githubusercontent.com/NT-GIT-HUB/Painel/main/html.sh > /dev/null 2>&1 && chmod 777 html.sh && sed -i -e 's/\r$//' html.sh && ./html.sh
-/etc/init.d/cron reload > /dev/null 2>&1
-/etc/init.d/cron restart > /dev/null 2>&1
-chmod 777 /var/www/html/admin/pages/servidor/ovpn
-chmod 777 /var/www/html/admin/pages/download
-chmod 777 /var/www/html/admin/pages/faturas/comprovantes
-service apache2 restart > /dev/null 2>&1
-clear
-echo -e "\033[1;32m PAINEL ONEVPS v1.1 INSTALADO COM SUCESSO!"
-echo -e "\033[1;32m Em caso de erros entra na pasta LEIAME em /var/www/html"
-echo -e "\033[1;32m OBS:Na VPS Cliente SSH PAGO usar o script SSH PLUS OU CRASHVPN"
-echo -e "\033[1;32m Na VPS Cliente SSH FREE usar o script SSH PLUS OU CRASHVPN junto com o VPSMANAGERSETUP para evitar erros na criação de contas FREE"
-echo -e "\033[1;32m Use o script de sicronização em todas as VPS (Painel e Cliente SSH) após a instalação"
-echo ""
-echo -e "\033[1;36m SEU PAINEL:\033[1;37m http://$IP/\033[0m"
-echo -e "\033[1;36m USUARIO:\033[1;37m admin\033[0m"
-echo -e "\033[1;36m SENHA:\033[1;37m admin\033[0m"
-echo -e "\033[1;36m CASO NAO ENTRE BASTA COLOCAR UM /admin NA BARRA DE ENDERECO"
-echo ""
-echo -e "\033[1;32m MODDED BY @ANDLEY302!"
-echo ""
-echo -e "\033[1;33m Altere a senha quando logar no painel>> Configuracoes>> Senha Antiga: admin >> Nova Senha: \033[0m"
-cat /dev/null > ~/.bash_history && history -c
-rm /root/install
+echo "Login Painel ADMIN: admin"
+echo "Senha Painel ADMIN: admin"
+echo "Acesso Painel ADMIN: $cake/admin"
+echo "Acesso PHPMYADMIN: $cake/phpmyadmin"
+echo "Login PHPMYADMIN: root" 
+echo "senha PHPMYADMIN: $root_password"
+echo "Backup dos dados do PHPMyadmin se encontra no /root/PHPMYADMIN.txt"
+echo "Acesso PHPMYADMIN: $cake/phpmyadmin" >> PHPMYADMINDATA.txt
+echo "Login PHPMYADMIN: root" >> PHPMYADMINDATA.txt
+echo "senha PHPMYADMIN: $root_password" >> PHPMYADMINDATA.txt
+sleep 10
+}
+menu1
